# cpuNaive

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  out.txt
data/: plot.py
include/: ACO.h  Algo.h  Graph.h  binaryGraph.h  binaryKeyValueStore.h  config.h  debug.h  keyValueStore.h
logs/: AS1  AS2  AS3  AS4  AS5  AntSystem2EndOfIterWeightUpdate.txt  AntSystemWithoutWeightUpdate.txt  afterclass  afterclass2  afterclass4  getAllNodeCnt.py  getNodeCnt.py  log1.txt  log2.txt  log3.txt  log4.txt  log5.txt  log6.txt  longrun  out.txt  plotPaths.py  reg1  reg2  reg3  regression1_log.txt  regression2_log.txt  system4run1.txt  system4run2.txt  system4run3.txt  system4run4.txt  system4run5.txt  system5run1.txt  system5run2.txt  tk.txt  tmp  tmp.py  tmp1  tmp2
src/: ACO.cpp  Algo.cpp  AlgoAnt.cpp  AlgoAnt2.cpp  AlgoAntSystem.cpp  AlgoAntSystem2.cpp  AlgoAntSystem3.cpp  AlgoAntSystem4.cpp  AlgoAntSystem5.cpp  AlgoRandomAnt.cpp  Graph.cpp  binaryGraph.cpp  binaryKeyValueStore.cpp  cpuNaive.cpp  debug.cpp  genGraph.cpp  keyValueStore.cpp  kronecker_generator.m  regression.cpp  regression2.cpp  regression3.cpp  regression4.cpp  regression5.cpp  regression_multithread.cpp  regression_tmp.cpp
